router/rules.v4
# Generated by iptables-save v1.8.11 (nf_tables) on Thu Aug  6 18:19:48 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -d 192.168.10.0/24 -i enp0s3 -o enp0s8 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.99.0/30 -d 192.168.10.0/24 -i enp0s10 -j ACCEPT
-A FORWARD -s 192.168.99.0/30 -d 192.168.20.0/24 -i enp0s10 -j ACCEPT
-A FORWARD -s 192.168.30.0/24 -d 192.168.10.0/24 -i enp0s10 -j ACCEPT
-A FORWARD -s 192.168.30.0/24 -d 192.168.20.0/24 -i enp0s10 -j ACCEPT
-A FORWARD -i enp0s10 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i enp0s8 -o enp0s3 -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s3 -j ACCEPT
-A FORWARD -d 192.168.20.0/24 -i enp0s8 -o enp0s9 -j ACCEPT
COMMIT
# Completed on Thu Aug  6 18:19:48 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Thu Aug  6 18:19:48 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1:76]
-A POSTROUTING -s 192.168.10.0/24 -o enp0s3 -j MASQUERADE
-A POSTROUTING -s 192.168.20.0/24 -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Thu Aug  6 18:19:48 2026
